# bem-comsol

./: README.md  classes.py  ctrl_voltage.py  freq.ipynb  freqsol.py  globalvar.py  load.py  output.csv  pyproject.toml  setup.py  simulate.py
bemcomsol/: __init__.py  mode1d.py  simulation.py
data/: DC1.csv  DC2.csv  DC3.csv  DC4.csv  DC5.csv  DC6.csv  DC7.csv
demo/data/: DC3.csv  DC5.csv  DC6.csv  DC7.csv
