[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "bemcomsol"
version = "0.1.1"
description = "A python package that can simulate electrostatics for ion traps using boundary element method provided by COMSOL Multiphysics."
authors = ["Xiaotian Feng <fxt2003@outlook.com>"]
repository = "https://github.com/fengxiaot/bem-comsol"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.0"
scipy = "^1.0"
mph = "^0.0"
pandas = "^1.0"

[tool.poetry.dev-dependencies]
# Add any development dependencies here, if needed.
